contact page finished+finished contrast issues

--- a/real_deal-css.css
+++ b/real_deal-css.css
@@ -66,7 +66,7 @@ footer {
     align-items: end;
 }
 #copyright {
-    color: #565656;
+    color: white;
     text-align: left;
     align-self: center;
     padding-left: 10px;
@@ -146,14 +146,9 @@ h2.home_deal {
     padding: 10px 15px;
     border-radius: 15px;
     background-color: #565656;
-    color: black;
+    color: white;
     align-self: center;
     text-align: center;
-    text-shadow: 
-    -1px -1px 0 white, /* Top-left */
-    1px -1px 0 white,  /* Top-right */
-    -1px 1px 0 white,  /* Bottom-left */
-    1px 1px 0 white;   /* Bottom-right */
 }
 
 
@@ -204,4 +199,59 @@ h1.services_contact {
     1px -1px 0 black,  /* Top-right */
     -1px 1px 0 black,  /* Bottom-left */
     1px 1px 0 black;   /* Bottom-right */
+}
+
+
+
+
+#content_contact {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    justify-items: center;
+    align-items: center;
+    background-color: #aaaaaa;
+}
+.contact_title {
+    text-align: center;
+    grid-column: 1/6;   
+    grid-row: 1/2;
+    z-index: 2;
+    color: rgb(255, 255, 255);
+    font-size: 200px;
+    margin: 0 auto;
+    background-color: black;
+    border-radius: 25px;
+    padding: 10px 20px;
+}
+.contact_contact {
+    text-align: center;
+    grid-column: 1/2;
+    grid-row: 1/2;
+    font-size: 100px;
+}
+.contact_number {
+    text-align: center;
+    grid-column: 1/2;
+    grid-row: 2/3;
+    font-size: 150px;
+
+}
+.contact_deal {
+    text-align: center;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    font-size: 100px;
+}
+.contact_facebook_logo {
+    align-self: center;
+    max-width: 200px ;
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+.content_view {
+    max-width: 100%;
+    grid-column: 1/3;
+    border-top: 20px solid white;
+    border-bottom: 20px solid white;
 }
